--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-<script src="https://cdn.jsdelivr.net/gh/ncase/nutshell/nutshell.js"></script>
+<!DOCTYPE html>
+<html>
+    <head>
+        <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell/nutshell.js"></script>
+    </head>
+    <body>
+        <!-- the content goes here -->
+    </body>
+</html>
+
