--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell/nutshell.js"></script>
+        <title>Example</title>
     </head>
     <body>
-        <!-- the content goes here -->
+        <p>This is an example of a simple HTML page with one paragraph.</p>
     </body>
 </html>
+
 
