--- a/index.html
+++ b/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Example</title>
+        <title>Test</title>
     </head>
     <body>
-        <p>This is an example of a simple HTML page with one paragraph.</p>
+        <h1>
+            <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell/nutshell.js"></script>
+        </h1>
+        <p>Test.</p>
     </body>
 </html>
 
