--- a/index.html
+++ b/index.html
@@ -7,7 +7,14 @@
         <h1>
             <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell/nutshell.js"></script>
         </h1>
-        <p>Test.</p>
+        <h1>Dream DAO</h1>
+            <p>Powered by <a href="#:xCU">:Civics Unplugged</a>, Dream <a href="#:xDAO">:DAO</a> trains Gen Zers to use web3 to build a brighter future.</p>
+            <p></p>
+        <h1>:x CU</h1>
+            <p>Civics Unplugged is a 501(c)(3) not-for-profit corporation</p>
+                <p></p>
+        <h1>:x DAO</h1>
+            <p>DAO stands for Decentralized Autonomous Organization</p>
     </body>
 </html>
 
