--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <p>Civics Unplugged is a 501(c)(3) not-for-profit corporation</p>
                 <p></p>
         <h1>:x DAO</h1>
-            <p>DAO stands for Decentralized Autonomous Organization</p>
+            <p>DAO stands for a Decentralized Autonomous Organization</p>
     </body>
 </html>
 
