--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
             <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell/nutshell.js"></script>
         </h1>
         <h1>Dream DAO</h1>
-            <p>Powered by <a href="#:xCU">:Civics Unplugged</a>, Dream <a href="#:xDAO">:DAO</a> trains Gen Zers to use web3 to build a brighter future.</p>
+            <p>Powered by <a href="#:xCU">:Civics Unplugged</a>, Dream <a href="#:xDAO">:DAO</a> trains Gen Zers to use <a href="https://en.wikipedia.org/wiki/Web3">:web3</a> to build a brighter future.</p>
             <p></p>
         <h1>:x CU</h1>
-            <p>Civics Unplugged is a 501(c)(3) not-for-profit corporation</p>
-                <p></p>
+            <p>Civics Unplugged is a 501(c)(3) <a href="https://en.wikipedia.org/wiki/Not-for-profit_organization">:not-for-profit corporation</a></p>
+            <p></p>
         <h1>:x DAO</h1>
-            <p>DAO stands for a Decentralized Autonomous Organization</p>
+            <p>DAO stands for Decentralized Autonomous Organization</p>
     </body>
 </html>
 
