--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <script src="https://cdn.jsdelivr.net/gh/ncase/nutshell/nutshell.js"></script>
         </h1>
         <h1>Dream DAO</h1>
-            <p>Powered by <a href="#:xCU">:Civics Unplugged</a>, Dream <a href="#:xDAO">:DAO</a> trains Gen Zers to use <a href="https://en.wikipedia.org/wiki/Web3">:web3</a> to build a brighter future.</p>
+            <p>Powered by <a href="#:xCU">:Civics Unplugged</a>, Dream <a href="#:xDAO">:DAO</a> trains Gen Z to use <a href="https://en.wikipedia.org/wiki/Web3">:web3</a> to build a brighter future.</p>
             <p></p>
         <h1>:x CU</h1>
             <p>Civics Unplugged is a 501(c)(3) <a href="https://en.wikipedia.org/wiki/Not-for-profit_organization">:not-for-profit corporation</a></p>
